--- a/HelloWorld/Views/Home/About.cshtml
+++ b/HelloWorld/Views/Home/About.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewBag.Title = "About";
+    ViewBag.Title = Resources.Resource.About;
 }
 
 <hgroup class="title">
@@ -8,7 +8,7 @@
 
 <article>
     <p>
-        This is my first expirience in making PhotoSite, and even OOP itself. Don't be angry on me, please!)
+        @Resources.Resource.AboutBody
     </p>
 </article>
 
