--- a/HelloWorld/Views/Home/Index.cshtml
+++ b/HelloWorld/Views/Home/Index.cshtml
@@ -1,5 +1,4 @@
-﻿@*@model IEnumerable<Dominion.Picture>*@
-@model IEnumerable<HelloWorld.Models.UserProfile>
+﻿@model IEnumerable<HelloWorld.Models.UserProfile>
 
 @{
     ViewBag.Title = "Home Page";
@@ -13,44 +12,3 @@
         <hr />
         </div>
 }
-
-@*<div id="carousel-example-captions" class="carousel slide" data-ride="carousel">
-    <ol class="carousel-indicators">
-        <li class="active" data-target="#carousel-example-captions" data-slide-to="0"></li>
-        <li data-target="#carousel-example-captions" data-slide-to="1" class=""></li>
-        @for (int i = 2; i < Model.Count() && i < 5; i++)
-        {
-            <li class="" data-target="#carousel-example-captions" data-slide-to="@i"></li>
-        }
-    </ol>
-    <div class="carousel-inner">
-        <div class="item active">
-            <img src="~/Images/@Model.First().PictureName" data-src="holder.js/900x500/auto/#666:#666" alt="900x500">
-            <div class="carousel-caption">
-              <h3>@Model.First().PictureContent</h3>
-            </div>
-        </div>
-        @foreach (var item in Model.Take(5).ToList())
-        {
-
-            if (item != Model.First())
-            {
-                
-            <div class="item">
-                <img src="~/Images/@item.PictureName" data-src="holder.js/900x500/auto/#777:#777" alt="900x500">
-                <div class="carousel-caption">
-                  <h3>@item.PictureContent</h3>
-                </div>
-            </div>
-            }
-
-        }
-    </div>
-    <a class="left carousel-control" href="#carousel-example-captions" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left"></span>
-    </a>
-    <a class="right carousel-control" href="#carousel-example-captions" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right"></span>
-    </a>
-</div>*@
-
