--- a/HelloWorld/Views/Shared/_Layout.cshtml
+++ b/HelloWorld/Views/Shared/_Layout.cshtml
@@ -23,14 +23,14 @@
             </div>
             <div class="collapse navbar-collapse">
                 <ul class="nav navbar-nav">
-                    <li>@Html.ActionLink("About", "About", "Home")</li>
-                    <li>@Html.ActionLink("Contacts", "Contact", "Home")</li>
+                    <li>@Html.ActionLink(Resources.Resource.About, "About", "Home")</li>
+                   <li>@Html.ActionLink(Resources.Resource.Contacts, "Contact", "Home")</li>
                     @if (Request.IsAuthenticated)
                     {
                         <li class="dropdown">
-                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">User<b class="caret"></b></a>
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">@Resources.Resource.User<b class="caret"></b></a>
                             <ul class="dropdown-menu" role="menu">
-                                <li><a href="javascript:document.getElementById('logoutForm').submit()">Log Out</a></li>
+                                <li><a href="javascript:document.getElementById('logoutForm').submit()">@Resources.Resource.LogOut</a></li>
                             </ul>
                         </li>
                     }
@@ -52,7 +52,36 @@
 
         <hr>
     </div>
+     <footer>
+        <div class="navbar navbar-inverse navbar-fixed-bottom">
+            <div class="container">
+                <div class="navbar-collapse collapse navbar-inverse-collapse">
 
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <div class="btn-group dropup">
+                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">@Resources.Resource.ChooseLang<span class="caret"></span></button>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="~/Home/ChangeCulture?lang=en">English</a></li>
+                                    <li><a href="~/Home/ChangeCulture?lang=ru">Русский</a></li>
+
+                                </ul>
+                            </div>
+                            @*<div class="btn-group dropup">
+                                <button type="button" class="btn btn-success dropdown-toggle" data-toggle="dropdown">@MyRes.Theme <span class="caret"></span></button>
+                                <ul class="dropdown-menu" role="menu">
+                                    <li><a href="~/Home/SetTheme?theme=black">@MyRes.Black</a></li>
+                                    <li><a href="~/Home/SetTheme?theme=white">@MyRes.White</a></li>
+
+                                </ul>
+                            </div>*@
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+
+    </footer>
 
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
