--- a/HelloWorld/Views/Shared/_LoginPartial.cshtml
+++ b/HelloWorld/Views/Shared/_LoginPartial.cshtml
@@ -1,6 +1,6 @@
 ﻿@if (Request.IsAuthenticated)
 {
-    <li>@Html.ActionLink(" Hello," + User.Identity.Name + "!", "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Управление" })
+    <li>@Html.ActionLink(Resources.Resource.Hello + User.Identity.Name + "!", "Manage", "Account", routeValues: null, htmlAttributes: new { @class = "username", title = "Управление" })
         @using (Html.BeginForm("LogOff", "Account", FormMethod.Post, new { id = "logoutForm" }))
         {
             @Html.AntiForgeryToken()
@@ -9,7 +9,7 @@
 }
 else
 {
-    <li>@Html.ActionLink("Registration", "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
-    <li>@Html.ActionLink("Log In", "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
+    <li>@Html.ActionLink(Resources.Resource.Registration, "Register", "Account", routeValues: null, htmlAttributes: new { id = "registerLink" })</li>
+    <li>@Html.ActionLink(Resources.Resource.LogIn, "Login", "Account", routeValues: null, htmlAttributes: new { id = "loginLink" })</li>
    
 }
