--- a/HelloWorld/Views/Account/ConfirmationFailure.cshtml
+++ b/HelloWorld/Views/Account/ConfirmationFailure.cshtml
@@ -1,8 +1,8 @@
 ﻿@{
-    ViewBag.Title = "Confirmation Failed";
+    @Resources.Resource.ConfirmFailed
 }
 
-<h2>Confirmation Failed</h2>
+<h2>@Resources.Resource.ConfirmFailed</h2>
 
 
-<h2>Account activation isn't finished. Please, check your email.</h2>
+<h2>@Resources.Resource.ConfirmFailedMessage</h2>
