--- a/HelloWorld/Views/Account/ConfirmationSuccess.cshtml
+++ b/HelloWorld/Views/Account/ConfirmationSuccess.cshtml
@@ -1,9 +1,9 @@
 ﻿@{
-    ViewBag.Title = "Confirmation Success";
+    ViewBag.Title = Resources.Resource.ConfirmSuccess;
 }
 
-<h2>Confirmation Success</h2>
+<h2>@Resources.Resource.ConfirmSuccess</h2>
 
 
-<h2>You have activated your account. Go and check our site - </h2>
-    <a href="/Account/Login">Log In</a>
+<h2>@Resources.Resource.ConfirmSuccessMessage </h2>
+    <a href="~/Account/Login">@Resources.Resource.LogIn</a>
