--- a/HelloWorld/Views/Account/RegisterStepTwo.cshtml
+++ b/HelloWorld/Views/Account/RegisterStepTwo.cshtml
@@ -1,13 +1,13 @@
 ﻿@{
-    ViewBag.Title = "Activate your account";
+    ViewBag.Title = Resources.Resource.Activ;
 }
 
 
 
 
-<h2>Activate your account</h2>
+<h2>@Resources.Resource.Activ</h2>
 
 
-<h3>Check your email for new letters. We sent you a link to confirm your registration.</h3>
+<h3>@Resources.Resource.ActivBody</h3>
 
 
