--- a/HelloWorld/Views/Shared/_Layout.cshtml
+++ b/HelloWorld/Views/Shared/_Layout.cshtml
@@ -25,11 +25,13 @@
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink(Resources.Resource.About, "About", "Home")</li>
                     <li>@Html.ActionLink(Resources.Resource.Contacts, "Contact", "Home")</li>
+                    <li>@Html.ActionLink(Resources.Resource.Library, "IndexAll", "Book")</li>
                     @if (Request.IsAuthenticated)
                     {
                         <li class="dropdown">
                             <a href="#" class="dropdown-toggle" data-toggle="dropdown">@Resources.Resource.User<b class="caret"></b></a>
                             <ul class="dropdown-menu" role="menu">
+                                <li>@Html.ActionLink(Resources.Resource.UserBooks, "Index", "Book")</li>
                                 <li><a href="javascript:document.getElementById('logoutForm').submit()">@Resources.Resource.LogOut</a></li>
                             </ul>
                         </li>
