--- a/HelloWorld/Views/Book/Delete.cshtml
+++ b/HelloWorld/Views/Book/Delete.cshtml
@@ -1,33 +1,23 @@
 ﻿@model HelloWorld.Models.Book
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = Resources.Resource.Delete;
 }
 
-<h2>Delete</h2>
-
-<h3>Are you sure you want to delete this?</h3>
+<h5>@Resources.Resource.Sureornot</h5>
 <fieldset>
-    <legend>Book</legend>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.BookName)
-    </div>
-    <div class="display-field">
+    <h2>
+        
+        
         @Html.DisplayFor(model => model.BookName)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.UserProfile.UserName)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.UserProfile.UserName)
-    </div>
+  
+    </h2>
+    
 </fieldset>
 @using (Html.BeginForm()) {
     @Html.AntiForgeryToken()
     <p>
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "Index")
+        <input type="submit" class="btn btn-success" value="@Resources.Resource.Delete" /> |
+        <a href="~/Book" class="btn btn-danger">@Resources.Resource.BackToList</a>
     </p>
 }
