--- a/HelloWorld/Views/Book/Edit.cshtml
+++ b/HelloWorld/Views/Book/Edit.cshtml
@@ -32,7 +32,7 @@
         </div>
 
         <p>
-            <input type="submit" value="Save" />
+            <input type="submit" class="btn btn-success" value="Save" />
         </p>
     </fieldset>
 }
