--- a/HelloWorld/Views/Book/Index.cshtml
+++ b/HelloWorld/Views/Book/Index.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    @Html.ActionLink(@Resources.Resource.CreateBook, "Create")
 </p>
 <table>
     <tr>
@@ -29,9 +29,9 @@
             @Html.DisplayFor(modelItem => item.UserProfile.UserName)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.BookId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.BookId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.BookId })
+            @Html.ActionLink(@Resources.Resource.Edit, "Edit", new { id=item.BookId }) |
+            @Html.ActionLink(@Resources.Resource.Chapters, "Chapters", new { id=item.BookId }) |
+            @Html.ActionLink(@Resources.Resource.Delete, "Delete", new { id=item.BookId })
         </td>
     </tr>
 }
