--- a/HelloWorld/Views/Book/ChapterEdit.cshtml
+++ b/HelloWorld/Views/Book/ChapterEdit.cshtml
@@ -40,13 +40,13 @@
         </div>
 
         <p>
-            <input type="submit" value="Save" />
+            <input type="submit" class="btn btn-success" value="Save" />
         </p>
     </fieldset>
 }
 
 <div>
-    @Html.ActionLink("Back to List", "Index")
+    @Html.ActionLink("Back to List", "Chapters",new {id = Model.BookId})
 </div>
 
 @section Scripts {
