--- a/HelloWorld/Views/Book/ChapterDelete.cshtml
+++ b/HelloWorld/Views/Book/ChapterDelete.cshtml
@@ -1,11 +1,12 @@
 ﻿@model HelloWorld.Models.Chapter
 
 @{
-    ViewBag.Title = "Details";
+    ViewBag.Title = "Delete";
 }
 
-<h2>Details</h2>
+<h2>Delete</h2>
 
+<h3>Are you sure you want to delete this?</h3>
 <fieldset>
     <legend>Chapter</legend>
 
@@ -30,7 +31,10 @@
         @Html.DisplayFor(model => model.BookId)
     </div>
 </fieldset>
-<p>
-    @Html.ActionLink("Edit", "Edit", new { id=Model.ChapterId }) |
-    @Html.ActionLink("Back to List", "Index")
-</p>
+@using (Html.BeginForm()) {
+    @Html.AntiForgeryToken()
+    <p>
+        <input type="submit" value="Delete" /> |
+        @Html.ActionLink("Back to List", "Chapters", new {id = Model.BookId})
+    </p>
+}
