--- a/HelloWorld/Views/Book/ChapterDetails.cshtml
+++ b/HelloWorld/Views/Book/ChapterDetails.cshtml
@@ -1,12 +1,11 @@
 ﻿@model HelloWorld.Models.Chapter
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = "Details";
 }
 
-<h2>Delete</h2>
+<h2>Details</h2>
 
-<h3>Are you sure you want to delete this?</h3>
 <fieldset>
     <legend>Chapter</legend>
 
@@ -31,10 +30,7 @@
         @Html.DisplayFor(model => model.BookId)
     </div>
 </fieldset>
-@using (Html.BeginForm()) {
-    @Html.AntiForgeryToken()
-    <p>
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "Index")
-    </p>
-}
+<p>
+    @Html.ActionLink("Edit", "ChapterEdit", new { id=Model.ChapterId }) |
+    @Html.ActionLink("Back to List", "Chapters", new { id = Model.BookId})
+</p>
