--- a/HelloWorld/Views/Book/Chapters.cshtml
+++ b/HelloWorld/Views/Book/Chapters.cshtml
@@ -7,7 +7,7 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink(@Resources.Resource.AddChapter, "Create")
+    @Html.ActionLink(@Resources.Resource.AddChapter, "ChapterCreate", new {id = ViewBag.BookId})
 </p>
 <table>
     <tr>
@@ -35,9 +35,9 @@
             @Html.DisplayFor(modelItem => item.BookId)
         </td>
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id=item.ChapterId }) |
-            @Html.ActionLink("Details", "Details", new { id=item.ChapterId }) |
-            @Html.ActionLink("Delete", "Delete", new { id=item.ChapterId })
+            @Html.ActionLink("Edit", "ChapterEdit", new { id=item.ChapterId }) |
+            @Html.ActionLink("Details", "ChapterDetails", new { id=item.ChapterId }) |
+            @Html.ActionLink("Delete", "ChapterDelete", new { id=item.ChapterId })
         </td>
     </tr>
 }
