--- a/HelloWorld/Views/Book/ChapterEdit.cshtml
+++ b/HelloWorld/Views/Book/ChapterEdit.cshtml
@@ -23,19 +23,13 @@
             @Html.ValidationMessageFor(model => model.ChapterName)
         </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.ChapterContent)
-        </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.ChapterContent)
+            @Html.HiddenFor(model => model.ChapterContent)
             @Html.ValidationMessageFor(model => model.ChapterContent)
         </div>
 
-        <div class="editor-label">
-            @Html.LabelFor(model => model.BookId)
-        </div>
         <div class="editor-field">
-            @Html.EditorFor(model => model.BookId)
+            @Html.HiddenFor(model => model.BookId)
             @Html.ValidationMessageFor(model => model.BookId)
         </div>
 
