--- a/HelloWorld/Views/Shared/_Layout.cshtml
+++ b/HelloWorld/Views/Shared/_Layout.cshtml
@@ -11,7 +11,8 @@
     @Scripts.Render("~/bundles/jquery")
     @RenderSection("scripts", required: false)
 </head>
-<body>
+
+<header>
     <div class="navbar navbar-inverse navbar-fixed-top" role="navigation">
         <div class="container">
             <div class="navbar-header">
@@ -45,6 +46,10 @@
             </div>
         </div>
     </div>
+</header>
+
+<body>
+
     <div class="jumbotron">
         <div class="container">
             <h1>Hello, world!</h1>
@@ -56,7 +61,7 @@
 
         <hr>
     </div>
-    <footer>
+    
         <div class="navbar navbar-inverse navbar-fixed-bottom">
             <div class="container">
                 <div class="navbar-collapse collapse navbar-inverse-collapse">
@@ -77,8 +82,8 @@
             </div>
         </div>
 
-    </footer>
-
     
+
+
 </body>
 </html>
