--- a/HelloWorld/Views/User/_ChangePasswordPartial.cshtml
+++ b/HelloWorld/Views/User/_ChangePasswordPartial.cshtml
@@ -2,9 +2,10 @@
 
 <h3>Смена пароля</h3>
 
-@using (Html.BeginForm("Manage", "User")) {
+@using (Html.BeginForm("Manage", "User"))
+{
     @Html.AntiForgeryToken()
-    @Html.ValidationSummary()
+    @Html.ValidationSummary(true)
 
     <fieldset>
         <legend>Форма изменения пароля @ViewBag.UserId</legend>
@@ -22,7 +23,10 @@
                 @Html.PasswordFor(m => m.ConfirmPassword)
             </li>
         </ol>
-   @*     <input type="hidden" value=" @(new{id = @ViewBag.UserId})" />*@
-        <input type="submit" value="Смена пароля" />
+        <p>
+            <input type="hidden" value=" @(new{id = @ViewBag.UserId})" />
+            <input type="submit" class="btn btn-success" value="Change password" />
+        </p>
     </fieldset>
 }
+
