--- a/HelloWorld/Views/Account/Manage.cshtml
+++ b/HelloWorld/Views/Account/Manage.cshtml
@@ -1,6 +1,6 @@
 ﻿@model HelloWorld.Models.LocalPasswordModel
 @{
-    ViewBag.Title = "Управление учетной записью";
+    ViewBag.Title = Resources.Resource.ManageAcc;
 }
 
 <hgroup class="title">
@@ -9,23 +9,13 @@
 
 <p class="message-success">@ViewBag.StatusMessage</p>
 
-<p>Вы вошли как <strong>@User.Identity.Name</strong>.</p>
+<p>@Resources.Resource.YouEntered<strong>@User.Identity.Name</strong>.</p>
 
 @if (ViewBag.HasLocalPassword)
 {
     @Html.Partial("_ChangePasswordPartial")
 }
-else
-{ 
-    @Html.Partial("_SetPasswordPartial")
-}
 
-<section id="externalLogins">
-    @Html.Action("RemoveExternalLogins")
-
-    <h3>Добавить внешнюю учетную запись</h3>
-    @Html.Action("ExternalLoginsList", new { ReturnUrl = ViewBag.ReturnUrl })
-</section>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
