--- a/HelloWorld/Views/Account/_ChangePasswordPartial.cshtml
+++ b/HelloWorld/Views/Account/_ChangePasswordPartial.cshtml
@@ -7,7 +7,7 @@
     @Html.ValidationSummary()
 
     <fieldset>
-        <legend>Форма изменения пароля</legend>
+        <legend>@Resources.Resource.ChangePassF</legend>
         <ol>
             <li>
                 @Html.LabelFor(m => m.OldPassword)
@@ -22,6 +22,6 @@
                 @Html.PasswordFor(m => m.ConfirmPassword)
             </li>
         </ol>
-        <input type="submit" value="Смена пароля" />
+        <input type="submit" value="@Resources.Resource.ChangePass" />
     </fieldset>
 }
