--- a/HelloWorld/Views/Shared/_Layout.cshtml
+++ b/HelloWorld/Views/Shared/_Layout.cshtml
@@ -39,6 +39,17 @@
                             </ul>
                         </li>
                     }
+
+                    @if (User.IsInRole("Admin"))
+                    {
+                        <li class="dropdown">
+                            <a href="#" class="dropdown-toggle" data-toggle="dropdown">@Resources.Resource.Admin<b class="caret"></b></a>
+                            <ul class="dropdown-menu" role="menu">
+                                <li>@Html.ActionLink(Resources.Resource.User, "Index", "User")</li>
+                                <li>@Html.ActionLink(Resources.Resource.Tag, "Index", "Tag")</li>
+                            </ul>
+                        </li>
+                    }
                 </ul>
                 <ul class="nav navbar-nav navbar-right">
                     <li>@Html.Partial("_LoginPartial")</li>
@@ -61,28 +72,54 @@
 
         <hr>
     </div>
-    
-        <div class="navbar navbar-inverse navbar-fixed-bottom">
-            <div class="container">
-                <div class="navbar-collapse collapse navbar-inverse-collapse">
 
-                    <ul class="nav navbar-nav navbar-right">
-                        <li>
-                            <div class="btn-group dropup">
-                                <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">@Resources.Resource.ChooseLang<span class="caret"></span></button>
-                                <ul class="dropdown-menu" role="menu">
-                                    <li><a href="~/Home/ChangeCulture?lang=en">English</a></li>
-                                    <li><a href="~/Home/ChangeCulture?lang=ru">Русский</a></li>
+    <div class="navbar navbar-inverse navbar-fixed-bottom">
+        <div class="container">
 
-                                </ul>
-                            </div>
-                        </li>
-                    </ul>
-                </div>
+
+
+            <div class="navbar-collapse collapse navbar-inverse-collapse">
+
+                <ul class="nav navbar-nav navbar-right">
+                    <li>
+                        <div class="btn-group dropup">
+                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">@Resources.Resource.ChooseLang<span class="caret"></span></button>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="~/Home/ChangeCulture?lang=en">English</a></li>
+                                <li><a href="~/Home/ChangeCulture?lang=ru">Русский</a></li>
+
+                            </ul>
+                        </div>
+                    </li>
+                    <li>
+                        <div class="btn-group dropup">
+                            <button type="button" class="btn btn-default dropdown-toggle" data-toggle="dropdown">@Resources.Resource.ChooseTheme<span class="caret"></span></button>
+                            <ul class="dropdown-menu" role="menu">
+                                <li><a href="~/Home/SetTheme?theme=black">@Resources.Resource.Black</a></li>
+                                <li><a href="~/Home/SetTheme?theme=white">@Resources.Resource.White</a></li>
+                            </ul>
+                        </div>
+                    </li>
+                </ul>
             </div>
         </div>
+    </div>
+    @if (Request.Cookies["Theme"] == null)
+    { 
+        <link href="~/Content/bootstrapst.css" rel="stylesheet" />
+    }
+    else
+    {
+        if (Request.Cookies["Theme"].Value == "black")
+        {
+        <link href="~/Content/Bootstrap.css" rel="stylesheet" />
+        }
+        else
+        {
+        <link href="~/Content/bootstrapst.css" rel="stylesheet" />
+        }
+    }
 
-    
 
 
 </body>
