--- a/HelloWorld/Views/User/Manage.cshtml
+++ b/HelloWorld/Views/User/Manage.cshtml
@@ -1,27 +1,12 @@
-﻿@model HelloWorld.Models.LocalPasswordModel
+﻿
 @{
-    ViewBag.Title = "Управление учетной записью";
+    ViewBag.Title = "Ты снёс пароль";
 }
 
-<hgroup class="title">
+
     <h1>@ViewBag.Title.</h1>
-</hgroup>
-
-<p class="message-success">@ViewBag.StatusMessage</p>
-
-<p>Вы вошли как <strong>@ViewBag.UserName @ViewBag.UserId</strong>.</p>
-
-@if (ViewBag.HasLocalPassword)
-{
-    @Html.Partial("_ChangePasswordPartial")
-}
-else
-{ 
-    @Html.Partial("_SetPasswordPartial")
-}
 
 
-
-@section Scripts {
-    @Scripts.Render("~/bundles/jqueryval")
-}
+Пароль снесён нахуй
+<hr />
+@Html.ActionLink("Back to List", "Index")
