Total Localization exept admin+verstka

--- a/HelloWorld/Views/Account/_ChangePasswordPartial.cshtml
+++ b/HelloWorld/Views/Account/_ChangePasswordPartial.cshtml
@@ -2,26 +2,33 @@
 
 <h3>Смена пароля</h3>
 
-@using (Html.BeginForm("Manage", "Account")) {
+@using (Html.BeginForm("Manage", "Account"))
+{
     @Html.AntiForgeryToken()
     @Html.ValidationSummary()
 
     <fieldset>
         <legend>@Resources.Resource.ChangePassF</legend>
         <ol>
-            <li>
-                @Html.LabelFor(m => m.OldPassword)
-                @Html.PasswordFor(m => m.OldPassword)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.NewPassword)
-                @Html.PasswordFor(m => m.NewPassword)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.ConfirmPassword)
-                @Html.PasswordFor(m => m.ConfirmPassword)
-            </li>
+            <div class="form-group">
+                <p class="col-lg-3 control-label">@Resources.Resource.OldPass</p>
+                <div class="col-lg-8">
+                    @Html.PasswordFor(m => m.OldPassword, new { @class = "form-control", @placeholder = @Resources.Resource.OldPass })
+                </div>
+            </div>
+            <div class="form-group">
+                <p class="col-lg-3 control-label">@Resources.Resource.NewPass</p>
+                <div class="col-lg-8">
+                    @Html.PasswordFor(m => m.NewPassword, new { @class = "form-control", @placeholder = @Resources.Resource.NewPass })
+                </div>
+            </div>
+            <div class="form-group">
+                <p class="col-lg-3 control-label">@Resources.Resource.ConfirmPassword</p>
+                <div class="col-lg-8">
+                    @Html.PasswordFor(m => m.ConfirmPassword, new { @class = "form-control", @placeholder = @Resources.Resource.ConfirmPassword })
+                </div>
+            </div>
         </ol>
-        <input type="submit" value="@Resources.Resource.ChangePass" />
+        <input type="submit" class="btn btn-success" value="@Resources.Resource.ChangePass" />
     </fieldset>
 }
