--- a/HelloWorld/Views/Book/Create.cshtml
+++ b/HelloWorld/Views/Book/Create.cshtml
@@ -23,9 +23,8 @@
     </fieldset>
 }
 
-<div class="btn btn-danger">
-    @Html.ActionLink(@Resources.Resource.BackToList, "Index")
-</div>
+
+<a href="~/Book" class="btn btn-danger">@Resources.Resource.BackToList</a>
 
 @section Scripts {
     @Scripts.Render("~/bundles/jqueryval")
