--- a/HelloWorld/Views/Account/Login.cshtml
+++ b/HelloWorld/Views/Account/Login.cshtml
@@ -1,7 +1,7 @@
 ﻿@model HelloWorld.Models.LoginModel
 
 @{
-    ViewBag.Title = "Выполнить вход";
+    ViewBag.Title = Resources.Resource.LogIn;
 }
 
 <hgroup class="title">
@@ -9,40 +9,44 @@
 </hgroup>
 
 <section id="loginForm">
-<h2>Используйте для входа локальную учетную запись.</h2>
-@using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl })) {
-    @Html.AntiForgeryToken()
-    @Html.ValidationSummary(true)
+    @using (Html.BeginForm(new { ReturnUrl = ViewBag.ReturnUrl }))
+    {
+        @Html.AntiForgeryToken()
+        @Html.ValidationSummary(true)
 
-    <fieldset>
-        <legend>Форма входа</legend>
-        <ol>
-            <li>
-                @Html.LabelFor(m => m.UserName)
-                @Html.TextBoxFor(m => m.UserName)
-                @Html.ValidationMessageFor(m => m.UserName)
-            </li>
-            <li>
-                @Html.LabelFor(m => m.Password)
-                @Html.PasswordFor(m => m.Password)
-                @Html.ValidationMessageFor(m => m.Password)
-            </li>
-            <li>
-                @Html.CheckBoxFor(m => m.RememberMe)
-                @Html.LabelFor(m => m.RememberMe, new { @class = "checkbox" })
-            </li>
-        </ol>
-        <input type="submit" value="Выполнить вход" />
-    </fieldset>
-    <p>
-        @Html.ActionLink("Зарегистрируйтесь", "Register"), если у вас нет учетной записи.
-    </p>
-}
-</section>
-
-<section class="social" id="socialLoginForm">
-    <h2>Используйте для входа другую службу.</h2>
-    @Html.Action("ExternalLoginsList", new { ReturnUrl = ViewBag.ReturnUrl })
+        <fieldset>
+            <legend>@Resources.Resource.LogInForm</legend>
+            <div>
+                <div class="form-group">
+                    <p class="col-lg-3 control-label">@Resources.Resource.Name</p>
+                    <div class="col-lg-8">
+                        @Html.TextBoxFor(m => m.UserName, new { @class = "form-control", @placeholder = @Resources.Resource.Name })
+                        @Html.ValidationMessageFor(m => m.UserName)
+                    </div>
+                </div>
+                <div class="form-group">
+                    <p class="col-lg-3 control-label">@Resources.Resource.PassLetter</p>
+                    <div class="col-lg-8">
+                        @Html.PasswordFor(m => m.Password, new { @class = "form-control", @placeholder = @Resources.Resource.PassLetter })
+                        @Html.ValidationMessageFor(m => m.Password)
+                    </div>
+                </div>
+               
+                <div class="form-group">
+                    <p class="col-lg-2 control-label">@Html.LabelFor(m => m.RememberMe, new { @class = "checkbox" })</p>
+                    <div class="col-lg-1">
+                        @Html.CheckBoxFor(m => m.RememberMe, new { @class = "form-control"})
+                        
+                    </div>
+                </div>
+            </div>
+            
+            <input type="submit" class="btn btn-success" value="@Resources.Resource.LogIn" />
+        </fieldset>
+        <p class="btn btn-danger">
+            @Html.ActionLink(Resources.Resource.Registration, "Register")
+        </p>
+    }
 </section>
 
 @section Scripts {
