--- a/HelloWorld/Views/Book/ChapterDelete.cshtml
+++ b/HelloWorld/Views/Book/ChapterDelete.cshtml
@@ -1,40 +1,20 @@
 ﻿@model HelloWorld.Models.Chapter
 
 @{
-    ViewBag.Title = "Delete";
+    ViewBag.Title = Resources.Resource.Delete;
 }
 
-<h2>Delete</h2>
+<h3>@Resources.Resource.SureornotChapter</h3>
 
-<h3>Are you sure you want to delete this?</h3>
-<fieldset>
-    <legend>Chapter</legend>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.ChapterName)
-    </div>
-    <div class="display-field">
+    <h2>
         @Html.DisplayFor(model => model.ChapterName)
-    </div>
+    </h2>
 
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.ChapterContent)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.ChapterContent)
-    </div>
-
-    <div class="display-label">
-         @Html.DisplayNameFor(model => model.BookId)
-    </div>
-    <div class="display-field">
-        @Html.DisplayFor(model => model.BookId)
-    </div>
-</fieldset>
-@using (Html.BeginForm()) {
+@using (Html.BeginForm())
+{
     @Html.AntiForgeryToken()
     <p>
-        <input type="submit" value="Delete" /> |
-        @Html.ActionLink("Back to List", "Chapters", new {id = Model.BookId})
+        <input type="submit" class="btn btn-success" value="@Resources.Resource.Delete" />
+        <a href="~/Book/Chapters/@Model.BookId" class="btn btn-danger">@Resources.Resource.BackToList</a>
     </p>
 }
