--- a/HelloWorld/Views/Home/Index.cshtml
+++ b/HelloWorld/Views/Home/Index.cshtml
@@ -13,7 +13,7 @@
         @foreach(var it in  item.Books)
         {
             <hr />
-            @Html.ActionLink(@it.BookName, "Index", "Book",new {id = it.BookId},null)
+            @Html.ActionLink(@it.BookName, "Chapters", "Book",new {id = it.BookId},null)
         }
         
     </div>
