added search in start page and library

--- a/HelloWorld/Views/Book/IndexAll.cshtml
+++ b/HelloWorld/Views/Book/IndexAll.cshtml
@@ -8,6 +8,12 @@
 <p>
     <a href="~/Book/Create" class="btn btn-default">@Resources.Resource.CreateBook</a>
 </p>
+
+<form method="GET">
+    <input type="search" class="form-control" name="search" />
+    <input type="submit" class="btn btn-default" value="Search" />
+</form>
+
 <table class=" table-hover">
     <thead>
         <tr>
