fixed search value

--- a/HelloWorld/Views/Book/IndexAll.cshtml
+++ b/HelloWorld/Views/Book/IndexAll.cshtml
@@ -11,7 +11,7 @@
 
 <form method="GET">
     <input type="search" class="form-control" name="search" />
-    <input type="submit" class="btn btn-default" value="Search" />
+    <input type="submit" class="btn btn-default" value="@Resources.Resource.Search@Resources.Resource.OnBooks" />
 </form>
 
 <table class=" table-hover">
