--- a/HelloWorld/Views/User/Index.cshtml
+++ b/HelloWorld/Views/User/Index.cshtml
@@ -27,7 +27,7 @@
         </td>
         <td>
             @Html.ActionLink("Edit", "Edit", new { id=item.UserId }) |
-            @Html.ActionLink("Details", "Manage", new { userId=item.UserId }) |
+            @Html.ActionLink("Drop Password", "DropPassword", new { userId=item.UserId }) |
             @Html.ActionLink("Delete", "Delete", new { id=item.UserId })
         </td>
     </tr>
