--- a/HelloWorld/Views/Home/Index.cshtml
+++ b/HelloWorld/Views/Home/Index.cshtml
@@ -6,7 +6,7 @@
 
 <form method="GET">
     <input type="search" class="form-control" name="search" />
-    <input type="submit" class="btn btn-default" value="Search" />
+    <input type="submit" class="btn btn-default" value="@Resources.Resource.Search@Resources.Resource.Users" />
 </form>
 
 
